# amba_paluku

./: .env.example  .gitignore  LICENSE  QUICK_START.md  README.md  config.yml  index.html  pyproject.toml
assets/: app.js  styles.css
assets/modules/: audio.js  constants.js  context.js  data-loader.js  router.js  scoring.js  sentence-utils.js  survey-builder.js  survey-extensions.js  text-utils.js  ui-config.js  views.js
data/: manifest.json  ui-text.json
data/lessons/: 0000-00-01.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-16.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-23.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-29.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-06.json  2026-06-09.json  2026-06-11.json  2026-06-14.json  2026-06-15.json  2026-06-17.json  2026-06-20.json  2026-06-22.json  (+2 more)
resources/: A1.md  A2.md  B1.md
scripts/: finalize_lesson.py  generate_daily_lesson.py  lesson_builder.py  remove_lesson_date.py
scripts/providers/: resource_loader.py  resource_writer.py  speech_generator.py  text_generator.py
scripts/schema/: language_properties.yml  lesson_schema.py
