[project]
name = "amba-paluku"
version = "0.1.0"
description = "Daily English-Telugu learning content pipeline"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "jsonschema>=4.23.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
    "indic-transliteration>=2.3.82",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
